--- a/Avalonia_Apps/AA19_FilterLists/AA19_FilterLists/AA19_FilterLists.csproj
+++ b/Avalonia_Apps/AA19_FilterLists/AA19_FilterLists/AA19_FilterLists.csproj
@@ -56,8 +56,8 @@
 		<PackageReference Include="Avalonia.Fonts.Inter" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" />
 		<PackageReference Include="CommunityToolkit.Mvvm" />
-		<PackageReference Include="MessageBox.Avalonia" />
-		<PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
+		<PackageReference Include="MsBox.Avalonia" />
+		<PackageReference Include="System.Configuration.ConfigurationManager" />
 		<PackageReference Include="Avalonia.Diagnostics" Condition="'$(Configuration)' == 'Debug'" />
 	</ItemGroup>
 </Project>
