--- a/CSharpBible/Data/DocumentUtils/Document.Pdf/Document.Pdf.csproj
+++ b/CSharpBible/Data/DocumentUtils/Document.Pdf/Document.Pdf.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="PDFsharp" Version="6.2.1" />
+    <PackageReference Include="PDFsharp" Version="6.2.2" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Document.Base\Document.Base.csproj" />
