--- a/Avalonia_Apps/AA20_SysDialogs/AA20_Sysdialogs/AA20_Sysdialogs.csproj
+++ b/Avalonia_Apps/AA20_SysDialogs/AA20_Sysdialogs/AA20_Sysdialogs.csproj
@@ -1,22 +1,38 @@
 ﻿<Project>
-	<Import Project="..\MVVM_Tutorial_net.props" />
+	<Import Project="..\Application.props" />
 
 	<PropertyGroup>
-    <OutputType>WinExe</OutputType>
-    <TargetFrameworks>net6.0-windows;net7.0-windows;net8.0-windows;</TargetFrameworks>
-    <BaseOutputPath>..\..\..\bin\$(MSBuildProjectName)\</BaseOutputPath>
-    <BaseIntermediateOutputPath>..\..\..\obj\$(MSBuildProjectName)\</BaseIntermediateOutputPath>
-    <Nullable>enable</Nullable>
-    <UseWPF>true</UseWPF>
-  </PropertyGroup>
-  <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
-  <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
-  <PropertyGroup />
-  <ItemGroup>
-    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Libraries\CommonDialogs\CommonDialogs_net.csproj" />
-    <ProjectReference Include="..\..\Libraries\MVVM_BaseLib\MVVM_BaseLib.csproj" />
-  </ItemGroup>    
+ <OutputType>WinExe</OutputType>
+ <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
+ <Nullable>enable</Nullable>
+ <ImplicitUsings>enable</ImplicitUsings>
+ <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
+ <RootNamespace>AA20_SysDialogs</RootNamespace>
+ </PropertyGroup>
+ <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
+ <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
+ <ItemGroup>
+ <Compile Remove="obj\**" />
+ <EmbeddedResource Remove="obj\**" />
+ <None Remove="obj\**" />
+ </ItemGroup>
+ <ItemGroup>
+   <None Remove="App.xaml" />
+ </ItemGroup>
+ <ItemGroup>
+ <PackageReference Include="Avalonia" />
+ <PackageReference Include="Avalonia.Controls.ColorPicker" />
+ <PackageReference Include="Avalonia.Desktop" />
+ <PackageReference Include="Avalonia.Themes.Fluent" />
+ <PackageReference Include="Avalonia.Fonts.Inter" />
+ <PackageReference Include="FontPickerAvalonia" />
+ <PackageReference Include="MessageBox.Avalonia" />
+ <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
+ <PackageReference Include="CommunityToolkit.Mvvm" />
+ <PackageReference Include="System.Drawing.Common" />
+ <PackageReference Include="Avalonia.Diagnostics" Condition="'$(Configuration)' == 'Debug'" />
+ </ItemGroup>
+ <ItemGroup>
+ <ProjectReference Include="..\..\Libraries\Avln_BaseLib\Avln_BaseLib.csproj" />
+ </ItemGroup>
 </Project>
