--- a/Avalonia_Apps/AA20_SysDialogs/AA20_SysdialogsTests/AA20_SysdialogsTests.csproj
+++ b/Avalonia_Apps/AA20_SysDialogs/AA20_SysdialogsTests/AA20_SysdialogsTests.csproj
@@ -1,29 +1,40 @@
 ﻿<Project>
-	<Import Project="..\MVVM_Tutorial_net.props" />
+	<Import Project="..\Application.props" />
 	<PropertyGroup>
-    <TargetFrameworks>net6.0-windows;net7.0-windows;net8.0-windows</TargetFrameworks>
-    <IsPackable>false</IsPackable>
-  </PropertyGroup>
-  <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
-  <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
-  <ItemGroup>
-    <Compile Remove="obj\**" />
-    <EmbeddedResource Remove="obj\**" />
-    <None Remove="obj\**" />
-  </ItemGroup>
+ <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
+ <IsPackable>false</IsPackable>
+ <RootNamespace>AA20_SysDialogs.Tests</RootNamespace>
+ <EnableMSTestRunner>true</EnableMSTestRunner>
+ </PropertyGroup>
+ <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
+ <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
+ <ItemGroup>
+ <Compile Remove="obj\**" />
+ <EmbeddedResource Remove="obj\**" />
+ <None Remove="obj\**" />
+ </ItemGroup>
 
 	<ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
-    <PackageReference Include="MSTest" Version="3.10.4" />
-    <PackageReference Include="coverlet.collector" Version="6.0.4">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="NSubstitute" Version="5.3.0" />
-  </ItemGroup>
+ <PackageReference Include="Microsoft.NET.Test.Sdk" />
+ <PackageReference Include="MSTest" />
+ <PackageReference Include="coverlet.collector">
+ <PrivateAssets>all</PrivateAssets>
+ <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+ </PackageReference>
+ <PackageReference Include="NSubstitute" />
+ <PackageReference Include="Avalonia.Headless" />
+ </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\MVVM_20a_CTSysdialogs\MVVM_20a_CTSysdialogs_net.csproj" />
-  </ItemGroup>
+ <ItemGroup>
+ <ProjectReference Include="..\AA20_Sysdialogs\AA20_Sysdialogs.csproj" />
+ </ItemGroup>
+ 
+ <!-- MSTest Assembly Configuration -->
+ <ItemGroup>
+ <AssemblyAttribute Include="Microsoft.VisualStudio.TestTools.UnitTesting.ParallelizeAttribute">
+ <_Parameter1>Microsoft.VisualStudio.TestTools.UnitTesting.ExecutionScope.MethodLevel</_Parameter1>
+ <_Parameter1_TypeName>Microsoft.VisualStudio.TestTools.UnitTesting.ExecutionScope</_Parameter1_TypeName>
+ </AssemblyAttribute>
+ </ItemGroup>
 
 </Project>
