--- a/Avalonia_Apps/AA06_ValueConverter2/AA06_Converters4/AA06_Converters4.csproj
+++ b/Avalonia_Apps/AA06_ValueConverter2/AA06_Converters4/AA06_Converters4.csproj
@@ -25,14 +25,14 @@
     <None Remove="MainWindow.xaml" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Avalonia" Version="11.2.2" />
-    <PackageReference Include="Avalonia.Desktop" Version="11.2.2" />
-    <PackageReference Include="Avalonia.Themes.Fluent" Version="11.2.2" />
-    <PackageReference Include="Avalonia.Fonts.Inter" Version="11.2.2" />
-    <PackageReference Include="Avalonia.Diagnostics" Version="11.2.2" />
-    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
-  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.9" />
-  <PackageReference Include="System.Configuration.ConfigurationManager" Version="9.0.0" />
+    <PackageReference Include="Avalonia"  />
+    <PackageReference Include="Avalonia.Desktop"  />
+    <PackageReference Include="Avalonia.Themes.Fluent"  />
+    <PackageReference Include="Avalonia.Fonts.Inter" />
+    <PackageReference Include="Avalonia.Diagnostics"  />
+    <PackageReference Include="CommunityToolkit.Mvvm"  />
+  <PackageReference Include="Microsoft.Extensions.DependencyInjection"  />
+  <PackageReference Include="System.Configuration.ConfigurationManager" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Libraries\Avln_BaseLib\Avln_BaseLib.csproj" />
