--- a/Avalonia_Apps/AvlnSamples/Avln_Hello_World/Avln_Hello_World.csproj
+++ b/Avalonia_Apps/AvlnSamples/Avln_Hello_World/Avln_Hello_World.csproj
@@ -31,6 +31,21 @@
 		<ProjectReference Include="..\..\Libraries\Avln_BaseLib\Avln_BaseLib.csproj" />
 	</ItemGroup>
 	
+	<!-- Embed code files for display in the application -->
+	<ItemGroup>
+		<EmbeddedResource Include="Views\HelloWorldView.axaml" />
+		<EmbeddedResource Include="ViewModels\HelloWorldViewModel.cs" />
+		<EmbeddedResource Include="Models\HelloWorldModel.cs" />
+	</ItemGroup>
+	
+	<ItemGroup>
+	  <Compile Update="Properties\Resources.Designer.cs">
+	    <DesignTime>True</DesignTime>
+	    <AutoGen>True</AutoGen>
+	    <DependentUpon>Resources.resx</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+	
 	<ItemGroup>
 		<EmbeddedResource Update="Properties\Resources.resx">
 			<Generator>PublicResXFileCodeGenerator</Generator>
