--- a/Avalonia_Apps/AvlnSamples/Avln_Samples.props
+++ b/Avalonia_Apps/AvlnSamples/Avln_Samples.props
@@ -3,7 +3,7 @@
 	<PropertyGroup>
 		<UpDir>..\</UpDir>
 		<LangVersion>latest</LangVersion>
-		<Copyright>Copyright © JC-Soft 2022-2025</Copyright>
+		<Copyright>Copyright ï¿½ JC-Soft 2022-2025</Copyright>
 		<Company>JC-Soft</Company>
 		<Authors>Mir</Authors>
 		<Product>Avalonia AvlnSamples</Product>
