--- a/CSharpBible/WPFSamples_2/WPF_Complex_Layout/WPF_Complex_Layout_net.csproj
+++ b/CSharpBible/WPFSamples_2/WPF_Complex_Layout/WPF_Complex_Layout_net.csproj
@@ -2,7 +2,7 @@
 	<Import Project="..\WPF_Samples_net.props" />
 	<PropertyGroup>
 		<OutputType>WinExe</OutputType>
-		<TargetFrameworks>net6.0-windows;net7.0-windows;net8.0-windows</TargetFrameworks>
+		<TargetFrameworks>net8.0-windows;net9.0-windows</TargetFrameworks>
 		<UseWPF>true</UseWPF>
 	</PropertyGroup>
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
