--- a/Avalonia_Apps/AA15_Labyrinth/AA15_Labyrinth/AA15_Labyrinth.csproj
+++ b/Avalonia_Apps/AA15_Labyrinth/AA15_Labyrinth/AA15_Labyrinth.csproj
@@ -1,4 +1,4 @@
-<Project>
+﻿<Project>
 	<Import Project="..\Application.props" />
 	<PropertyGroup>
 		<OutputType>WinExe</OutputType>
@@ -13,11 +13,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Avalonia" Version="11.3.7" />
-		<PackageReference Include="Avalonia.Desktop" Version="11.3.7" />
-		<PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.7" />
-		<PackageReference Include="Avalonia.Fonts.Inter" Version="11.3.7" />
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.10" />
+		<PackageReference Include="Avalonia" />
+		<PackageReference Include="Avalonia.Desktop" />
+		<PackageReference Include="Avalonia.Themes.Fluent" />
+		<PackageReference Include="Avalonia.Fonts.Inter" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" />
 	</ItemGroup>
 
 	<ItemGroup>
