--- a/Avalonia_Apps/AA14_ScreenX/ScreenX.BaseTests/ScreenX.BaseTests.csproj
+++ b/Avalonia_Apps/AA14_ScreenX/ScreenX.BaseTests/ScreenX.BaseTests.csproj
@@ -1,4 +1,4 @@
-<Project>
+﻿<Project>
 	<Import Project="..\Application.props" />
  <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -14,8 +14,7 @@
   <ItemGroup>
     <PackageReference Include="coverlet.collector" />
     <PackageReference Include="Microsoft.NET.Test.Sdk"/>
-    <PackageReference Include="xunit" Version="2.5.3" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
+    <PackageReference Include="MSTest" />
   </ItemGroup>
 
   <ItemGroup>
