--- a/Avalonia_Apps/AA14_ScreenX/ScreenX.BaseTests/ScreenX.BaseTests.csproj
+++ b/Avalonia_Apps/AA14_ScreenX/ScreenX.BaseTests/ScreenX.BaseTests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project>
 	<Import Project="..\Application.props" />
  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
@@ -13,14 +13,10 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk"/>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="MSTest" />
   </ItemGroup>
-
-  <ItemGroup>
-    <Using Include="Xunit" />
-  </ItemGroup>
-
+	
   <ItemGroup>
     <ProjectReference Include="..\ScreenX.Base\ScreenX.Base.csproj" />
   </ItemGroup>
