--- a/Avalonia_Apps/AA15_Labyrinth/Treppen.Base/Treppen.Base.csproj
+++ b/Avalonia_Apps/AA15_Labyrinth/Treppen.Base/Treppen.Base.csproj
@@ -1,12 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
+<Project>
+	<Import Project="..\Application.props" />
+	<PropertyGroup>
     <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <AssemblyName>Treppen.Base</AssemblyName>
   </PropertyGroup>
-  <ItemGroup>
+	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
+	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
+	<ItemGroup>
     <ProjectReference Include="..\..\Libraries\MathLibrary\MathLibrary.csproj" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
