--- a/Avalonia_Apps/AA15_Labyrinth/Directory.Packages.props
+++ b/Avalonia_Apps/AA15_Labyrinth/Directory.Packages.props
@@ -25,5 +25,8 @@
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="18.0.0" />
     <PackageVersion Include="MSTest" Version="4.0.1" />
     <PackageVersion Include="Coverlet.Collector" Version="6.0.4" />
-  </ItemGroup>
+		<PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.10"/>
+		<PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.10"/>
+		<PackageVersion Include="System.Drawing.Common" Version="9.0.0" />
+	</ItemGroup>
 </Project>
