--- a/CSharpBible/Data/DataAnalysis/DataAnalysis.Core/DataAnalysis.Core.csproj
+++ b/CSharpBible/Data/DataAnalysis/DataAnalysis.Core/DataAnalysis.Core.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
 	  <OutputType>Library</OutputType>
-    <TargetFramework>net9.0</TargetFramework>
+	  <TargetFrameworks>net9.0;net8.0</TargetFrameworks>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
