--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,14 @@
-﻿################################################################################
-# Diese .gitignore-Datei wurde von Microsoft(R) Visual Studio automatisch erstellt.
-################################################################################
-
-*.pfx
-*.exe
-*.dll
 *.bak
 *.user
-*.bak
-*.lnk
+*.db
+*.cache
+*.bin
+*.dll
+*.suo
+**/.vs/
+**/obj/
+**/obj.net/
+**/bin/
+Help
+packages
 *.snk
-/.svn
-/.vs
-/bin
-/obj
-/obj.net
-/**/.vs
-/**/obj
-/**/bin
-/**/TestResults
-/CSharpBible/Help
-/CSharpBible/Mobile
-/CSharpBible/Web
-/CSharpBible/WinUI
-/CSharpBible/Calc/Help
-/CSharpBible/DB/ADO_Test
-/CSharpBible/packages
-/TestStatements/packages
-/CSharpProgrammierHandbuch/Fibonacci2
-/TestStatements/AsyncExampleWPF
-/TestStatements/Help
-/JC-AMS/JC-AMS.sln.GhostDoc.xml
-/CSharpBible/Help
-*.editorconfig
-/CSharpBible/Libraries/CSFreeVision_
-/GenFreeWin/TestResults
-/CSharpBible/Games/Sokoban_Base/*.svn
-/CSharpBible/MVVM_Tutorial/UWP_00_Test/AppPackages
-/TestStatements/TestStatements/Version.inc
-obj.net
-/JC-AMS/Core/Resource/Version.inc
-/TestStatements/*.snk
-/CSharpBible/Libraries/*.snk
-/Transpiler_pp/Analyzer1/Analyzer1.Package/tools/install.ps1
-/Avalonia_Apps/Libraries/*.snk
-/WinAhnenNew/WinAhnenClsTests/Resources/BigData5.hej
