--- a/Transpiler_pp/TranspilerConsTest/TranspilerConsTest.csproj
+++ b/Transpiler_pp/TranspilerConsTest/TranspilerConsTest.csproj
@@ -15,6 +15,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\TranspilerLib.IEC\TranspilerLib.IEC.csproj" />
 		<ProjectReference Include="..\TranspilerLib\TranspilerLib.csproj" />
 	</ItemGroup>
 
