--- a/CSharpBible/Libraries/BaseLibTests/BaseLibTests.csproj
+++ b/CSharpBible/Libraries/BaseLibTests/BaseLibTests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project>
 	<Import Project="..\Libraries.props" />
 	<PropertyGroup>
-    <TargetFrameworks>net8.0;net9.0;net481;net48;net472;net462</TargetFrameworks>
+    <TargetFrameworks>net8.0;net9.0;net10.0;net481;net48;net472;net462</TargetFrameworks>
     <IsPackable>false</IsPackable>
 	</PropertyGroup>
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
