--- a/Transpiler_pp/TranspilerLib.Pascal/TranspilerLib.Pascal.csproj
+++ b/Transpiler_pp/TranspilerLib.Pascal/TranspilerLib.Pascal.csproj
@@ -1,13 +1,21 @@
 ﻿<Project>
 	<Import Project="..\Transpiler.Props" />
+
 	<PropertyGroup>
-		<TargetFrameworks>net8.0;net9.0;net10.0</TargetFrameworks>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\TranspilerLib\TranspilerLib.csproj" />
-  </ItemGroup>
+		<!-- Basis TFM -->
+		<TargetFrameworks>net8.0</TargetFrameworks>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
+	<PropertyGroup Condition="$([MSBuild]::VersionGreaterThanOrEquals('$(NETCoreSdkVersion)', '9.0.100'))">
+		<TargetFrameworks>$(TargetFrameworks);net9.0</TargetFrameworks>
+	</PropertyGroup>
+	<PropertyGroup Condition="$([MSBuild]::VersionGreaterThanOrEquals('$(NETCoreSdkVersion)', '10.0.100'))">
+		<TargetFrameworks>$(TargetFrameworks);net10.0</TargetFrameworks>
+	</PropertyGroup>
 
+	<ItemGroup>
+		<ProjectReference Include="..\TranspilerLib\TranspilerLib.csproj" />
+	</ItemGroup>
 </Project>
