--- a/Transpiler_pp/TranspilerLib/TranspilerLib.csproj
+++ b/Transpiler_pp/TranspilerLib/TranspilerLib.csproj
@@ -17,8 +17,7 @@
 		<TargetFrameworks>$(TargetFrameworks);net10.0</TargetFrameworks>
 	</PropertyGroup>
 	<ItemGroup>
-		<ProjectReference Condition="!$(TargetFramework.Contains('net4'))" Include="..\..\CSharpBible\Libraries\MVVM_BaseLib\MVVM_BaseLib.csproj" />
-		<ProjectReference Condition="$(TargetFramework.Contains('net4'))" Include="..\..\CSharpBible\Libraries\MVVM_BaseLib\MVVM_BaseLib.csproj" />
+		<ProjectReference Include="..\..\CSharpBible\Libraries\BaseLib\BaseLib.csproj" />
 	</ItemGroup>
 	<ItemGroup>
 		<Compile Update="Properties\Resources.Designer.cs">
