Refaktorierung: Einführung von DI und MVVM-Toolkit
Die Anwendung wurde auf Dependency Injection (DI) umgestellt, indem `Microsoft.Extensions.Hosting` und `Microsoft.Extensions.DependencyInjection` integriert wurden. Dienste wie `IPrimeService`, `IPlotService`, `MainViewModel` und `MainWindow` werden nun über den DI-Container verwaltet.

Das MVVM-Framework wurde durch die Einführung von `CommunityToolkit.Mvvm` modernisiert. Die Klassen `BindableBase` und `RelayCommand` wurden entfernt und durch `[ObservableProperty]` und `[RelayCommand]` ersetzt, um die Implementierung zu vereinfachen.

Weitere Änderungen:
- `PlotService` und `PrimeService` wurden von statischen Klassen in instanziierbare Klassen umgewandelt, die die neuen Schnittstellen `IPlotService` und `IPrimeService` implementieren.
- Verbesserte Unterstützung für Design-Time-Bindungen in XAML.
- Hinzufügen von NuGet-Paketen für MVVM- und DI-Unterstützung.
- Überarbeitung der `MainViewModel`-Logik zur Nutzung der neuen Dienste.

Diese Änderungen verbessern die Wartbarkeit, Testbarkeit und Modularität der Anwendung erheblich.

--- a/CSharpBible/Graphics/PrimeDisc/PrimeDisc.csproj
+++ b/CSharpBible/Graphics/PrimeDisc/PrimeDisc.csproj
@@ -8,6 +8,14 @@
     <UseWPF>true</UseWPF>
     <RootNamespace>PrimePlotter</RootNamespace>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Infrastructure\" />
+  </ItemGroup>
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
 </Project>
