--- a/CSharpBible/Data/PictureDB/PictureDB.Base/PictureDB.Base.csproj
+++ b/CSharpBible/Data/PictureDB/PictureDB.Base/PictureDB.Base.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.0" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.12" />
   </ItemGroup>
 
 </Project>
