--- a/CSharpBible/Data/DocumentUtils/Document.Html/Document.Html.csproj
+++ b/CSharpBible/Data/DocumentUtils/Document.Html/Document.Html.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
@@ -11,6 +11,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AngleSharp" Version="1.3.0" />
+    <PackageReference Include="AngleSharp" Version="1.4.0" />
   </ItemGroup>
 </Project>
