--- a/CSharpBible/Data/PictureDB/PictureDB.UI/PictureDB.UI.csproj
+++ b/CSharpBible/Data/PictureDB/PictureDB.UI/PictureDB.UI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
@@ -10,11 +10,12 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0" />
-    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageReference Include="System.Windows.Extensions" Version="10.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+     <ProjectReference Include="..\..\..\Libraries\CommonDialogs\CommonDialogs_net.csproj" />
     <ProjectReference Include="..\PictureDB.Base\PictureDB.Base.csproj" />
   </ItemGroup>
 </Project>
