--- a/CSharpBible/Games/Snake_BaseTests/Snake_BaseTests.csproj
+++ b/CSharpBible/Games/Snake_BaseTests/Snake_BaseTests.csproj
@@ -1,4 +1,4 @@
-<Project>
+﻿<Project>
 	<Import Project="..\Games_net.props" />
 	<PropertyGroup>
     <TargetFrameworks>net481;net48;net472;net462;net6.0;net7.0;net8.0;net9.0</TargetFrameworks>
@@ -12,8 +12,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
-		<PackageReference Include="MSTest" Version="3.10.4" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
+		<PackageReference Include="MSTest" Version="4.0.2" />
 		<PackageReference Include="coverlet.collector" Version="6.0.4">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
