--- a/Avalonia_Apps/AA22_AvlnCap/AA22_AvlnCap2/AA22_AvlnCap2.csproj
+++ b/Avalonia_Apps/AA22_AvlnCap/AA22_AvlnCap2/AA22_AvlnCap2.csproj
@@ -36,4 +36,6 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Libraries\Avln_BaseLib\Avln_BaseLib.csproj" />
   </ItemGroup>
+  <ItemGroup>
+  </ItemGroup>
 </Project>
