--- a/CSharpBible/Libraries/MVVM_BaseLib/MVVM_BaseLib.csproj
+++ b/CSharpBible/Libraries/MVVM_BaseLib/MVVM_BaseLib.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <TargetFrameworks>net481;net48;net472;net462;net8.0-windows</TargetFrameworks>
-    <Platforms>AnyCPU;x86</Platforms>
+    <Platforms>AnyCPU;x86;x64</Platforms>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
