--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,29 @@
 .vs
 bin
 obj
+*.db
+*.cache
+*.bin
+*.dll
 *.bak
 *.user
 *.log
-/obj.net
-/CSharpBible/Data/obj.net
-/CSharpBible/obj.net
+*.suo
+*.snk
+**/vs
+**/obj
+**/obj.net
+**/bin
+**/Help
+/CSharpBible/App2
+/CSharpBible/Mobile
+/CSharpBible/Web
+/CSharpBible/packages
+/CSharpBible/Simulation
+/CSharpBible/DB/ADO_Test
+/CSharpBible/Libraries/CSFreeVision_
+/CSharpBible/Libraries/MathLibraryTests/TestResults
+/CSharpBible/Graphics/PermutationTests/TestResults
+/CSharpBible/MVVM_Tutorial/UWP_00_Test
+/CSharpBible/WinUI/App1
 /TestStatements/Help
