Add CommonDialogs & VTileEditTests, refactor dialogs usage
Added CommonDialogs and VTileEditTests projects to the solution and updated solution configuration.
Refactored VTEVisual to use IOpenFileDialog abstraction from CommonDialogs instead of direct OpenFileDialog usage and threading.
Improved switch statement readability in VTEVisual.
Updated VTileEdit and VTileEditTests csproj files to use conditional TargetFrameworks for .NET 9/10 support.
Removed TaskDialog.cs from CommonDialogs build.
Refactored VTileDef to inherit from TileDefBase and use generic Enum-based methods for tile string and color retrieval.

--- a/CSharpBible/Libraries/CommonDialogs/CommonDialogs.csproj
+++ b/CSharpBible/Libraries/CommonDialogs/CommonDialogs.csproj
@@ -16,6 +16,7 @@
 	</PropertyGroup>
 	<ItemGroup>
 	  <Compile Remove="Class1.cs" />
+	  <Compile Remove="TaskDialog.cs" />
 	</ItemGroup>
 	<ItemGroup>
 	  <None Remove="CommonDialogs.csproj.bak" />
