--- a/CSharpBible/Games/VTileEditTests/VTileEditTests.csproj
+++ b/CSharpBible/Games/VTileEditTests/VTileEditTests.csproj
@@ -3,21 +3,34 @@
 	<Import Project="..\Packages.props" />
 	<PropertyGroup>
 		<OutputType>Library</OutputType>
-		<TargetFrameworks>net6.0;net7.0;net8.0;net9.0</TargetFrameworks>
+		<TargetFrameworks>net8.0</TargetFrameworks>
 		<ImplicitUsings>disable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
+	<PropertyGroup Condition="$([MSBuild]::VersionGreaterThanOrEquals('$(NETCoreSdkVersion)', '9.0.100'))">
+		<TargetFrameworks>$(TargetFrameworks);net9.0</TargetFrameworks>
+	</PropertyGroup>
+	<PropertyGroup Condition="$([MSBuild]::VersionGreaterThanOrEquals('$(NETCoreSdkVersion)', '10.0.100'))">
+		<TargetFrameworks>$(TargetFrameworks);net10.0</TargetFrameworks>
+	</PropertyGroup>
 	<PropertyGroup />
 	<ItemGroup>
-		<PackageReference Include="Microsoft.NET.Test.Sdk"/>
-		<PackageReference Include="MSTest"/>
+	  <Compile Include="..\Snake_Console\View\TileDef.cs" Link="Models\Snake_TileDef.cs" />
+	  <Compile Include="..\Sokoban_Base\ViewModels\TileDef.cs" Link="Models\SB_Tiles.cs" />
+	  <Compile Include="..\Sokoban_Base\View\VisualsDef.cs" Link="Models\SB_TileDef.cs" />
+	  <Compile Include="..\Werner_Flaschbier\Model\Tiles.cs" Link="Models\FB_Tiles.cs" />
+	  <Compile Include="..\Werner_Flaschbier\View\VTileDef.cs" Link="Models\FB_TileDef.cs" />
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.NET.Test.Sdk" />
+		<PackageReference Include="MSTest" />
 		<PackageReference Include="coverlet.collector">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="NSubstitute"/>
+		<PackageReference Include="NSubstitute" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="$(UpDir)\Libraries\ConsoleDisplay\ConsoleDisplay.csproj" />
