Refactor enums, namespaces & add JSON2 tile serialization
- Unified and reformatted PackageReference tags in all test .csproj files
- Extended WPF resource embedding to all PNG files (*.png)
- Moved FieldDef and Tiles enums out of namespace blocks, added XML docs
- Changed Sokoban ViewModel namespaces to Sokoban.ViewModels
- Updated TileDefinition test construction for new parameters
- Added "Character" to TileCategory and "Json2" to EStreamType enums
- Introduced JSON2 serialization format for VisTileData (Json2Data record)
- Fixed indentation and improved serialization/deserialization logic
- Updated and added compressed test data for new serialization
- Included additional FieldDef source files in VTileEditTests.csproj

--- a/CSharpBible/Games/SharpHack.Wpf/SharpHack.Wpf.csproj
+++ b/CSharpBible/Games/SharpHack.Wpf/SharpHack.Wpf.csproj
@@ -10,7 +10,7 @@
 		<None Remove="tiles.png" />
 	</ItemGroup>
 	<ItemGroup>
-		<EmbeddedResource Include="tiles.png">
+		<EmbeddedResource Include="*.png">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</EmbeddedResource>
 	</ItemGroup>
