Add Sokoban TileDef test references and expected class
Added reference files for Sokoban TileDef tests in multiple formats (binary, JSON, text, XML) to enable automated validation of tile graphics and colors. Integrated new C# class `TileDef` in `Console.Views` namespace, providing expected tile definitions and color mappings for Sokoban. Updated project file to include the new resource for test purposes.

--- a/CSharpBible/Games/VTileEditTests/VTileEditTests.csproj
+++ b/CSharpBible/Games/VTileEditTests/VTileEditTests.csproj
@@ -49,6 +49,7 @@
 	</ItemGroup>
 	<ItemGroup>
 	  <None Include="Resources\Snake\Snake_TileDef_Expected.cs" />
+	  <None Include="Resources\Sokoban\Sokoban_TileDef_Expected.cs" />
 	</ItemGroup>
 	
 </Project>
